Add client id to procedure
